refactor: refactored Controller.class for enhanced readability

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -6,25 +6,23 @@ Requirements
 Refactoring code
 
 ★ Route.class: Configure environment variable for host and port
-★ Comparar parameters para validar que sea la cantidad correcta
-★ Controller.class, implementar constante de error cuando la pericion al servidor no coincida con alguna url del router.
 
 
 ⚝ Fixed debug
 
-★ Arregla bug cuando replico la peticion al servidor, en el cliente http me sale este error: Empty reply from server
+★
 
 
 ⚝
 Document code
 
-★ Route.class
+★ All project
 
 
 ⚝
 Unit test
 
-★ Route.class
+★ All project
 
 
 ⚝ Order
