refactor: refactored Controller.class for enhanced readability

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -6,6 +6,7 @@ Requirements
 Refactoring code
 
 ★ Route.class: Configure environment variable for host and port
+★ Manejar errores http
 
 
 ⚝ Fixed debug
