docs: added documentation for the App and Route classes

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -7,6 +7,7 @@ Refactoring code
 
 ★ Route.class: Configure environment variable for host and port
 ★ Handle http errors
+★ Change ArrayList to Collections
 
 
 ⚝
