style: delete not usage classes

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,28 +1,19 @@
 ⚝ Refactoring code
 
 ★
-Route.class: Configure environment variable for host and port.
+Route.class: Configure environment variable for host and port
 
 ★
-Handle http errors.
-
-★
-Change ArrayList to Collections.
+Handle custom exceptions
 
 ★
 Validar que los parametros de las uri o puntos de acceso coincidan con los
 parametros de la url definida en su controlador asignado por ejemplo el parametro name de 
 "/profile/{name}" debe estar definido en la url "https://api.github.com/users/{name}" declarada
-en el controlador asignado.
+en el controlador asignado
 
 ★
-Validar las URIs definidas en los controladores.
-
-★
-Implementar this para hacer referencia a las propiedades de las clases.
-
-★
-Cambiar el nombre le metodo processResponse por get, en los controladores y la clase Controller.
+Validar las URIs definidas en los controladores
 
 
 ⚝ Documentation
