--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -5,3 +5,4 @@
 ⚝ Documentar el codigo
 ⚝ Implementar test unitario
 ⚝ Validar cuando no se recivan arguemntos que se esperan
+⚝ Cambiar la logica de manejo de request, para no tener intancias de objetos co el mismo proposito (Codigo Repetido)
