--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -6,3 +6,4 @@
 ⚝ Implementar test unitario
 ⚝ Validar cuando no se recivan arguemntos que se esperan
 ⚝ Cambiar la logica de manejo de request, para no tener intancias de objetos co el mismo proposito (Codigo Repetido)
+⚝ Delegar la responsabilidad de la peticion a la api de github a Response class o a Controller class
