--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -7,3 +7,5 @@
 ⚝ Validar cuando no se recivan arguemntos que se esperan
 ⚝ Cambiar la logica de manejo de request, para no tener intancias de objetos co el mismo proposito (Codigo Repetido)
 ⚝ Delegar la responsabilidad de la peticion a la api de github a Response class o a Controller class
+⚝ Response requiere un map con donde la clave es el nombre del parametro que esperea y el valor es el argumento recivido en el request
+⚝ Implementar interface ExpectedArgument para los controladores que esperan argumentos del request
