--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -4,3 +4,4 @@
 ⚝ Implement unit tests  
 ⚝ Add null checks in setters, avoid assigning null values, and throw appropriate exceptions if necessary
 ⚝ Implement Logger instead of system
+⚝ Change the standard output of the exception stack trace
