--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -5,3 +5,4 @@
 ⚝ Change the standard output of the exception stack trace
 ⚝ Refactor code and reimplement logic in the CustomException class and in the concrete classes that implement this abstract class
 ⚝ Implement class ServiceException, no use class, not knows use
+⚝ Fixe bug, excepted base path
